--- a/Practica 3/P3.tex
+++ b/Practica 3/P3.tex
@@ -36,7 +36,8 @@ Para realizar este ejercicio hemos usado unos ficheros existentes en el reposito
 
 \section*{Ejercicio 3}
 \subsection*{Implemente un programa WHILE que calcule la suma de tres valores. Debe utilizar una variable auxiliar que acumule el resultado de la suma.}
-La función WHILE que implementa la suma de los tres valores quedaría de la siguiente manera:
+Para realizar este ejercicio hemos usado los recursos proporcionados en el fichero "F.m" en talfuma.
+\\La función WHILE que implementa la suma de los tres valores quedaría de la siguiente manera:
 \\
 \\ \includegraphics[width=10cm]{Ejercicio3.png}
 \\
